[package]
name = "gfx-xtra"
version = "0.1.1"
edition = "2021"
categories = ["embedded", "graphics"]
keywords = ["embedded", "graphics"]
description = "embedded-graphics xtras."
repository = "https://github.com/ivmarkov/gfx-xtra"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.65"

[dependencies]
embedded-graphics = "0.7"
log = { version = "0.4", no-default-features = true, optional = true }
